# GetSet

./: .gitmodules  CMakeLists.txt  main.cpp
static/: config.txt
static/www/: auto.html  manual.html
